# datalog-interpreter

./: README.md  cabal.project
.github/workflows/: haskell.yml
interpreter/: CHANGELOG.md  interpreter.cabal
interpreter/src/: Interpreter.hs
interpreter/test/: InterpreterTest.hs
parser/: CHANGELOG.md  parser.cabal
parser/src/: DatalogAST.hs  Parser.hs
parser/test/: ParserTest.hs
