cabal-version:      2.4
name:               parser
version:            0.1.0.0
description:        Please see the README on GitHub at <https://github.com/ALanovaya/fp2023#readme>
homepage:           https://github.com/ALanovaya/fp2023#readme
bug-reports:        https://github.com/ALanovaya/fp2023/issues
author:             ALanovaya
maintainer:         lanovaya.al6@gmail.com
license:            MIT
license-file:       ../LICENSE
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ALanovaya/fp2023/parser
executable parser
    main-is:          
        Main.hs
    build-depends:    
        base >=4.14 && <5, megaparsec
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:   
        app
    default-language: Haskell2010

library
  exposed-modules:
      DatalogAST, Parser
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.14 && <5, containers >=0.5 && <0.7, megaparsec >=9.0.0 && <10.0.0, parser-combinators
  default-language: Haskell2010

test-suite parser-test
  type: exitcode-stdio-1.0
  hs-source-dirs: 
    test
  main-is: ParserTest.hs
  build-depends: 
    base >=4.14 && <5, HUnit ^>=1.6, containers >=0.5 && <0.7, megaparsec >=9.0.0 && <10.0.0, parser-combinators, parser, hspec, hspec-megaparsec
  default-language: Haskell2010